Revise TicketTac description and feature list
Updated the description and features of TicketTac for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 </header>
 
 <div class="container">
-  <h1>TicketTac — Le bot qui gère vos tickets automatiquement</h1>
+  <h1>TicketTac — Le bot de tickets le plus propre et intuitif</h1>
+
   <p>
-    TicketTac est un bot Discord conçu pour gérer vos tickets de manière simple, rapide et totalement automatisée.
-    Il organise les demandes, assigne les rôles, crée des salons privés, enregistre les logs et améliore l’expérience
-    de support sur votre serveur.
+    TicketTac automatise entièrement la gestion des tickets sur votre serveur Discord.  
+    Création instantanée, interface claire, logs complets, permissions intelligentes,  
+    tout est pensé pour rendre votre support plus rapide, plus propre et plus efficace.
   </p>
 
   <a class="btn btn-primary" href="https://discord.com/oauth2/authorize?client_id=TON_ID&scope=bot&permissions=8">Ajouter le bot</a>
@@ -31,7 +32,12 @@
   <div class="card">
     <h2>Dernière mise à jour</h2>
     <p><strong>Version :</strong> 1.4.2</p>
-    <p><strong>Nouveautés :</strong> Système de logs amélioré, interface de ticket plus claire, optimisation des permissions.</p>
+    <p><strong>Nouveautés :</strong>  
+      • Interface de ticket améliorée  
+      • Logs plus détaillés  
+      • Optimisation des permissions  
+      • Système plus rapide et plus stable
+    </p>
   </div>
 
   <div class="card">
@@ -39,8 +45,8 @@
     <p><strong>Statut :</strong> 🟢 En ligne</p>
     <ul>
       <li>Création automatique de tickets</li>
-      <li>Logs complets des demandes</li>
-      <li>Gestion du staff et permissions intelligentes</li>
+      <li>Logs complets et exportables</li>
+      <li>Gestion intelligente du staff</li>
     </ul>
   </div>
 </div>
