--- a/support.html
+++ b/support.html
@@ -34,8 +34,7 @@
 
   <div class="card">
     <h2>Certification</h2>
-    <p>TicketTac vise la certification Discord.  
-    Le bot respecte les règles de sécurité, de confidentialité et de conformité imposées par Discord.</p>
+    <p>TicketTac respecte les normes Discord et vise la certification officielle.</p>
   </div>
 </div>
 
